# poker_odds

./: .gitignore  CMakeLists.txt  README.md
calculator/: CMakeLists.txt  README.md
calculator/src/: main.cpp
include/: AnalyzeRounds.hpp  CalculateOdds.hpp  Card.hpp  CardExactMatch.hpp  Cards.hpp  Dealer.hpp  DealerPermutations.hpp  Deck.hpp  DeckBuilder.hpp  Hand.hpp  HandDatabase.hpp  HandRank.hpp  Hands.hpp  Player.hpp  PossibleHands.hpp  ResolveSameRankWinner.hpp  Round.hpp  ShuffleDeck.hpp  Suit.hpp  ValidateHand.hpp
include/archive/: ComparePlayerHands.hpp
include/cards/: BaseCard.hpp  Cards.hpp
include/engines/: Find.hpp  FindAllPairs.hpp  FindHighCard.hpp  FindPairs.hpp  FindRuns.hpp  FindStraightsAndFlushes.hpp
include/engines/archive/: FindPairs.hpp
include/hands/: BaseHand.hpp  ExplicitHand.hpp  FlushHand.hpp  FourOfAKindHand.hpp  FullHouseHand.hpp  Hand.hpp  HandFactory.hpp  Hands.hpp  HighCardHand.hpp  OnePairHand.hpp  RoyalFlushHand.hpp  StraightAceLowHand.hpp  StraightFlushAceLowHand.hpp  StraightFlushHand.hpp  StraightHand.hpp  ThreeOfAKindHand.hpp  TwoPairHand.hpp
include/logging/: Logger.hpp  Logging.hpp
include/player/: Player.hpp  Players.hpp
include/poker/: Poker.hpp  PokerImpl.hpp
include/state/: GamePlayState.hpp
include/statistics/: PlayerStatistics.hpp
lib/: CMakeLists.txt
lib/include/: AnalyzeRounds.hpp  CalculateOdds.hpp  Deck.hpp  HandRank.hpp  PlayerRound.hpp  PlayerRoundOutcome.hpp  PossibleHands.hpp  Rank.hpp  RankEquality.hpp  Rounds.hpp  ValidateHand.hpp
lib/include/archive/: TransposeHands.hpp
lib/include/buffer/: Buffer.hpp
lib/include/calculator/: Calculator.hpp  CalculatorImpl.hpp
lib/include/cards/: BaseCard.hpp  Card.hpp  CardExactMatch.hpp
lib/include/engines/: FindHighCard.hpp  FindStraights.hpp
lib/include/engines/archive/: FindStraightsAndFlushes.hpp
lib/include/hands/: BaseHand.hpp  ExplicitHand.hpp  FlushHand.hpp  FourOfAKindHand.hpp  FullHouseHand.hpp  Hand.hpp  HighCardHand.hpp  OnePairHand.hpp  RoyalFlushHand.hpp  StraightAceLowHand.hpp  StraightFlushAceLowHand.hpp  StraightFlushHand.hpp  StraightHand.hpp  ThreeOfAKindHand.hpp  TwoPairHand.hpp
lib/include/logging/: Logger.hpp
lib/include/player/: Player.hpp  Players.hpp
lib/include/poker/: Poker.hpp  PokerImpl.hpp
lib/include/pool/: Pool.hpp
lib/include/statistics/: Statistics.hpp
lib/src/: DeckBuilder.cpp  ShuffleDeck.cpp
lib/src/archive/: CalculateOdds.cpp  Dealer.cpp  TransposeHands.cpp  ValidateHand.cpp
lib/src/calculator/: Calculator.cpp  CalculatorImpl.cpp
lib/src/engines/archive/: FindHighCard.cpp
lib/src/hands/: BaseHand.cpp  ExplicitHand.cpp  FlushHand.cpp  FourOfAKindHand.cpp  FullHouseHand.cpp  HighCardHand.cpp  OnePairHand.cpp  RoyalFlushHand.cpp  StraightAceLowHand.cpp  StraightFlushAceLowHand.cpp  StraightFlushHand.cpp  StraightHand.cpp  ThreeOfAKindHand.cpp  TwoPairHand.cpp
lib/src/hands/archive/: HandFactory.cpp
lib/src/poker/: Poker.cpp  PokerImpl.cpp
lib/test/: TestSuiteFindStraights.cpp  TestSuiteHand.cpp  TestSuiteHandFactory.cpp  TestSuiteHandRank.cpp  TestSuitePermutations.cpp  TestSuitePossibleHands.cpp  TestSuiteRank.cpp  TestSuiteValidateHand.cpp  TestSuiteWinningHands.cpp  main.cpp
lib/test/archive/: TestSuiteDealerPermutations.cpp  TestSuiteHandDatabase.cpp
poker/: CMakeLists.txt  README.md
src/: AnalyzeRounds.cpp  CalculateOdds.cpp  ComparePlayerHands.cpp  Dealer.cpp  DealerPermutations.cpp  DeckBuilder.cpp  Hand.cpp  HandDatabase.cpp  Player.cpp  PossibleHands.cpp  ResolveSameRankWinner.cpp  ShuffleDeck.cpp  TransposeHands.cpp  ValidateHand.cpp  main.cpp
src/archive/: AnalyzeRounds.cpp  DealerPermutations.cpp  HandDatabase.cpp  PossibleHands.cpp
src/cards/: BaseCard.cpp
src/engines/: FindAllPairs.cpp  FindHighCard.cpp  FindPairs.cpp  FindRuns.cpp  FindStraightsAndFlushes.cpp
src/engines/archive/: FindPairs.cpp
src/hands/: BaseHand.cpp  ExplicitHand.cpp  FlushHand.cpp  FourOfAKindHand.cpp  FullHouseHand.cpp  HandFactory.cpp  HighCardHand.cpp  OnePairHand.cpp  RoyalFlushHand.cpp  StraightAceLowHand.cpp  StraightFlushAceLowHand.cpp  StraightFlushHand.cpp  StraightHand.cpp  ThreeOfAKindHand.cpp  TwoPairHand.cpp
src/player/: Player.cpp
src/poker/: Poker.cpp  PokerImpl.cpp
test/: TestSuiteCard.cpp  TestSuiteDealerPermutations.cpp  TestSuiteFindAllPairs.cpp  TestSuiteFindHighCard.cpp  TestSuiteFindPairs.cpp  TestSuiteFindRuns.cpp  TestSuiteFindStraightsAndFlushes.cpp  TestSuiteHand.cpp  TestSuiteHandDatabase.cpp  TestSuiteHandFactory.cpp  TestSuiteHandRank.cpp  TestSuitePermutations.cpp  TestSuitePossibleHands.cpp  TestSuiteSuit.cpp  TestSuiteTranspose.cpp  TestSuiteValidateHand.cpp  TestSuiteWinningHands.cpp
test/archive/: TestSuiteFindStraightsAndFlushes.cpp  TestSuiteTranspose.cpp
